--- a/src/.env
+++ b/src/.env
@@ -1,1 +1,2 @@
-DATABASE_URL=postgres://nyzitdwz:9CuVKJIblEs4GCKPDve1Tcgw_X99X6fI@fanny.db.elephantsql.com/nyzitdwz
+NODE_ENV="development"
+DATABASE_URL=postgres://asgddjjf:By4O7Kv523MG1n2JtoOjmERVKu0i2I7U@fanny.db.elephantsql.com/asgddjjf
