--- a/src/.env
+++ b/src/.env
@@ -1,2 +1,2 @@
 NODE_ENV="development"
-DATABASE_URL=postgres://asgddjjf:By4O7Kv523MG1n2JtoOjmERVKu0i2I7U@fanny.db.elephantsql.com/asgddjjf
+DATABASE_URL=postgres://nuurjagd:D2k6EtQcU5X4OHpUd7eVjEmiPf5vGQ8j@fanny.db.elephantsql.com/nuurjagd
